# short-your-friends

./: .gitignore  ARCHITECTURE.md  README.md  contributing.md  main.py  pyproject.toml  replacements.txt
ios-client/ShortYourFriends/: ContentView.swift  MarketDetailView.swift  MarketListView.swift  Models.swift  NetworkClient.swift  ServerResponse.swift  ShortYourFriendsApp.swift
ios-client/ShortYourFriends.xcodeproj/: project.pbxproj
ios-client/ShortYourFriends.xcodeproj/xcuserdata/goddess.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios-client/ShortYourFriends.xcodeproj/xcuserdata/goddess.xcuserdatad/xcschemes/: xcschememanagement.plist
python-prototype/: .env.example  CLAUDE.md  Makefile  README.md  benchmark.py  pyproject.toml  server.py  server_cheatsheet.md  simulation.py  state.json  trigger_settle.py
python-prototype/logs/: 1-order-book-design.md  2-user-id-type-decision.md  3-server-persistence.md  4-interface-pattern-adoption.md  5-ios-tcp-client-architecture.md
python-prototype/src/engine/: #engine.py#  engine.py  interface.py
python-prototype/src/orderbook/: audit.py  book.py  economy.py  engine.py  id_mapper.py  linked_list.py  node.py  trade.py  types.py
python-prototype/tests/: test_discovery.py  test_fuzz_auditor.py  test_id_mapper.py  test_integration.py  test_integrity.py  test_linked_list.py  test_market_id_persistence.py  test_matching.py  test_partial_fill_registry.py  test_persistence.py  test_server_flow.py  test_test_book.py
src/orderbook/: linked_list.py  node.py
