[project]
name = "order-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "hypothesis>=6.148.8",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.8",
]

# Group for benchmark-only tools (keeps them out of dev/prod)
benchmark = [
    # "pytest-benchmark",  # Uncomment if pytest becomes dependency
]

[tool.mypy]
strict = true
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
check_untyped_defs = true

# Use mypy_path so imports resolve correctly
mypy_path = "src"

# src-layout: treat `src/` as the only package root
explicit_package_bases = true
namespace_packages = true

# Check everything starting from src/ and the test scripts
files = ["src", "server.py", "benchmark.py", "simulation.py", "trigger_settle.py"]

# Usage: uv run mypy

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E/F = standard errors, I = import sorting

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
